; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ifmcstat/extr_ifmcstat.c_inm_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ifmcstat/extr_ifmcstat.c_inm_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCAST_UNDEFINED = common dso_local global i64 0, align 8
@MCAST_EXCLUDE = common dso_local global i64 0, align 8
@inm_modes = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @inm_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @inm_mode(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @MCAST_UNDEFINED, align 8
  %6 = icmp uge i64 %4, %5
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @MCAST_EXCLUDE, align 8
  %10 = icmp ule i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %7
  %12 = load i8**, i8*** @inm_modes, align 8
  %13 = load i64, i64* %3, align 8
  %14 = getelementptr inbounds i8*, i8** %12, i64 %13
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %2, align 8
  br label %17

16:                                               ; preds = %7, %1
  store i8* null, i8** %2, align 8
  br label %17

17:                                               ; preds = %16, %11
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
